# ProtSpace

./: .dockerignore  .env.example  .gitignore  3FTx.html  CHANGELOG.md  Dockerfile  README.md  build.sh  pyproject.toml  render.yaml  requirements-py310.txt  requirements-py311.txt  requirements-py312.txt  update_deps.sh
.github/workflows/: docker-build-push.yml  docker.yml  jekyll-gh-pages.yml  python-release.yml  python.yml  release.yml  test.yml
app/: main.py
app/data/: json_loader.py  prepare_json.py
data/3FTx/: 3FTx.csv  3FTx.json  3FTx_colored.json  3FTx_colored_hex.json  3FTx_colored_rbga.json  3FTx_customized.json  3FTx_prott5.h5  costumize_colors.json  costumize_colors_rbga.json
data/Pla2g2/: Pla2g2.csv  Pla2g2.fasta  style.json
data/Pla2g2/embs/: prott5.h5
data/Pla2g2/protspace_files/: Pla2g2.json  Pla2g2_customized.json  Pla2g2_noTransperancy.json
data/gfp/foldseek_pdb_subset_1000/tmp/: aln.0  aln.1  aln.10  aln.2  aln.3  aln.4  aln.5  aln.6  aln.7  aln.8  aln.9  aln.index  latest  query_db  query_db.lookup  query_db.source  target_db.index  target_db_ca  target_db_ca.index  target_db_h  target_db_h.index  target_db_ss
data/gfp/mmseqs_subset_1000/tmp/: latest  search_results.0  search_results.1  search_results.10  search_results.11  search_results.2  search_results.3  search_results.4  search_results.5  search_results.6  search_results.7  search_results.8  search_results.9  search_results.index  sequences_db  sequences_db.index  sequences_db.lookup  sequences_db.source  sequences_db_h  sequences_db_h.index
data/gfp/mmseqs_subset_1000/tmp/13617842788636159306/: pref_0.0  pref_0.1  pref_0.10  pref_0.11  pref_0.2  pref_0.3  pref_0.4  pref_0.5  pref_0.6  pref_0.7  pref_0.8  pref_0.9  pref_0.index
data/gfp/processed_data/: gfp_features.csv  prott5_subset_1000.h5  subset_1000.fasta
data/gfp/protspace/: gfp.json  gfp_str_sim.json  gfp_style.json  style.json
data/gfp/scripts/: foldseek2dist_mat.py  foldseek2distance_matrix.ipynb  mmseqs2distance_matrix.ipynb  prepare_data.ipynb  protspace_runner.py  run_foldseek.sh  run_mmseqs.sh  subset_fasta.sh
data/h_sapiens/: costumize_colors_rbga.json  h_sapiens.csv
data/phages/: phages_prep.ipynb  style.json  style2.json
data/phages/processed/: all_members.csv  all_members_7k_function_500_hyp.fasta  foldseek.csv  foldseek_new.csv
data/phages/raw/: all_members_7k_function_500_hyp.csv  foldseek_clusterreps_7k_function_500_hyp.csv  foldseek_clusterreps_7k_function_500_hyp.fasta
data/toxins/processed_data/: analysis.ipynb  hymenoptera.csv  toxins.csv  toxins_all.csv
data/toxins/protspace/: hymenoptera.json  style.json  style.md  style.txt
data/toxins/scripts/: map_protein_families.py  process_toxin.ipynb  seq_sim.ipynb  taxonomy_fetcher.py
examples/: image_creation.py  prepare_data.py  run_interactive_mode.py
examples/notebook/: ClickThrough_GenerateEmbeddings.ipynb  Explore_ProtSpace.ipynb  Run_ProtSpace.ipynb  pLM_embeddings.ipynb  run_dummy_example.ipynb
protspace/: app.py  callbacks.py  config.py  data_loader.py  data_processing.py  layout.py  main.py  plotting.py  utils.py  wsgi.py
script/: add_feature_colors.py  add_feature_style.py  download_foldcomp.sh  prepare_json.py
script/embeddings/: lightAttention.py
script/figures_script/: merge_svg.py
script/render/: render.yaml  wsgi.py
scripts/embeddings/: lightAttention.py
scripts/figures_script/: imag_config.yaml  imag_config1.yaml  imag_config2.yaml  merge_svg.py
src/protspace/: NglMoleculViewer.py  __init__.py  app.py  callbacks.py  config.py  data_processing.py  layout.py  main.py  plotting.py  wsgi.py
src/protspace/utils/: add_feature_style.py  analyse_json.py  prepare_json.py
tests/: test_prepare_json.py
