[tool.poetry]
name = "protspace"
version = "0.1.0"
description = "A visualisation tool for protein embeddings from pLMs"
authors = ["Tobias Senoner <tobias.senoner@tum.de>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [{include = "protspace"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
h5py = "^3.10.0"
numpy = "^1.26.4"
dash = "^2.15.0"
plotly = "^5.18.0"
datashader = "^0.16.0"
scikit-learn = "^1.4.0"
matplotlib = "^3.8.2"
umap-learn = "^0.5.6"
dash-bio = "^1.0.2"
kaleido = "0.2.1"
dash-daq = "^0.5.0"
dash-iconify = "^0.1.2"


[tool.poetry.group.dev.dependencies]
jupyter-black = "^0.3.4"
jupyter = "^1.0.0"
pyarrow = "^15.0.0"
holoviews = "^1.18.2"
hvplot = "^0.9.2"
panel = "^1.3.8"
xarray = "^2024.1.1"
jupyter-bokeh = "^3.0.7"
dash-treeview-antd = "^0.0.1"
dash-bootstrap-components = "^1.5.0"
dash-iconify = "^0.1.2"
dash-mantine-components = "^0.12.1"
biopython = "^1.83"
ijson = "^3.3.0"
torch = "2.2"
cairosvg = "^2.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.main:main"