[project]
name = "protspace"
version = "0.11.1"
description = "A visualisation tool for protein embeddings from pLMs"
authors = [{ name = "Tobias Senoner", email = "tobias.senoner@tum.de" }]
readme = "README.md"
license = "GPL-3.0"
requires-python = ">=3.12"

dependencies = [
    "dash>=2.18.1",
    "dash-bio>=1.0.2",
    "dash-daq>=0.5.0",
    "dash-iconify>=0.1.2",
    "h5py>=3.12.1",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "scikit-learn>=1.5.2",
    "kaleido>=0.2.1,!=0.2.1.post1",
    "umap-learn>=0.5.6",
    # numpy 2.0.2 is required for compatibility with numba (datasahder, umap-learn)
    "numpy==2.0.2",
]

[project.optional-dependencies]
webserver = [
    "gunicorn>=23.0.0",
    "python-dotenv>=1.0.1",
]
test = [
    "pytest",
    "pytest-cov",
]

[tool.uv]
dev-dependencies = [
    "biopython>=1.84",
    "cairosvg>=2.7.1",
    "dash-bootstrap-components>=1.6.0",
    "dash-mantine-components>=0.14.5",
    "dash-treeview-antd>=0.0.1",
    "holoviews>=1.19.1",
    "hvplot>=0.11.0",
    "ijson>=3.3.0",
    "jupyter>=1.1.1",
    "jupyter-black>=0.4.0",
    "jupyter-bokeh>=4.0.5",
    "panel>=1.5.2",
    "pyarrow>=17.0.0",
    "ruff>=0.6.9",
    "xarray>=2024.9.0",
    "torch==2.2",
    "seaborn>=0.13.2",
    "pacmap>=0.7.3",
    "pytest>=8.3.3",
]

[project.scripts]
protspace = "protspace.main:run"
protspace-json = "protspace.utils.prepare_json:main"
protspace-feature-colors = "protspace.utils.add_feature_style:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.semantic_release]
assets = [
    "uv.lock",
]
version_toml = [
    "pyproject.toml:project.version",
]
version_variables = [
    "src/protspace/__init__.py:__version__",
]
build_command = "uv lock"
